[gd_scene load_steps=41 format=2]

[ext_resource path="res://cycle/stations/order_station/order_station.png" type="Texture" id=1]
[ext_resource path="res://cycle/stations/order_station/order_station.gd" type="Script" id=2]
[ext_resource path="res://cycle/player_proximity_detector.tscn" type="PackedScene" id=3]
[ext_resource path="res://cycle/stations/order_station/order_station_ninepath.png" type="Texture" id=4]
[ext_resource path="res://hud_theme.tres" type="Theme" id=5]
[ext_resource path="res://font_big.tres" type="DynamicFont" id=6]
[ext_resource path="res://cycle/stations/order_station/store_grid_widget.tscn" type="PackedScene" id=7]
[ext_resource path="res://cycle/stations/order_station/store_buttons_01.png" type="Texture" id=8]
[ext_resource path="res://cycle/stations/order_station/store_buttons_00.png" type="Texture" id=9]
[ext_resource path="res://cycle/stations/order_station/store_buttons_05.png" type="Texture" id=10]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_00.png" type="Texture" id=11]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_01.png" type="Texture" id=12]
[ext_resource path="res://cycle/stations/order_station/store_grid.gd" type="Script" id=13]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_01.png" type="Texture" id=14]
[ext_resource path="res://cycle/stations/order_station/widget_config.gd" type="Script" id=15]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_04.png" type="Texture" id=16]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_00.png" type="Texture" id=17]
[ext_resource path="res://cycle/stations/order_station/store_buttons_02.png" type="Texture" id=18]
[ext_resource path="res://cycle/stations/order_station/store_buttons_04.png" type="Texture" id=19]
[ext_resource path="res://cycle/stations/order_station/store_buttons_03.png" type="Texture" id=20]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_02.png" type="Texture" id=21]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_03.png" type="Texture" id=22]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_04.png" type="Texture" id=23]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_02.png" type="Texture" id=24]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_05.png" type="Texture" id=25]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_03.png" type="Texture" id=26]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_05.png" type="Texture" id=27]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_06.png" type="Texture" id=28]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_06.png" type="Texture" id=29]
[ext_resource path="res://cycle/stations/order_station/store_buttons_06.png" type="Texture" id=30]
[ext_resource path="res://cycle/stations/order_station/back_button.gd" type="Script" id=31]
[ext_resource path="res://cycle/shrapnel/tinkle.wav" type="AudioStream" id=32]
[ext_resource path="res://cycle/stations/order_station/store_open.wav" type="AudioStream" id=33]
[ext_resource path="res://cycle/stations/order_station/store_close.wav" type="AudioStream" id=34]
[ext_resource path="res://cycle/stations/order_station/store_buttons_07.png" type="Texture" id=35]
[ext_resource path="res://cycle/stations/order_station/store_buttons_purchased_07.png" type="Texture" id=36]
[ext_resource path="res://cycle/stations/order_station/store_buttons_highlighted_07.png" type="Texture" id=37]
[ext_resource path="res://cycle/stations/player_distance_fade.gd" type="Script" id=38]
[ext_resource path="res://ninepatch.png" type="Texture" id=39]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 31.5 )

[node name="order_station" type="Node2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
offset = Vector2( 0, -25 )
hframes = 2
vframes = 2

[node name="player_proximity_detector" parent="." instance=ExtResource( 3 )]

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_proximity_detector"]
position = Vector2( 0, -31.5 )
shape = SubResource( 1 )

[node name="store_hud_layer" type="CanvasLayer" parent="."]

[node name="order_station_hud" type="CenterContainer" parent="store_hud_layer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin_container" type="MarginContainer" parent="store_hud_layer/order_station_hud"]
margin_left = 7.0
margin_top = 2.0
margin_right = 712.0
margin_bottom = 403.0
rect_min_size = Vector2( 705, 401 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nine_patch_rect" type="NinePatchRect" parent="store_hud_layer/order_station_hud/margin_container"]
margin_right = 705.0
margin_bottom = 401.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
patch_margin_left = 28
patch_margin_top = 12
patch_margin_right = 29
patch_margin_bottom = 15
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="margin_container" type="MarginContainer" parent="store_hud_layer/order_station_hud/margin_container"]
margin_right = 705.0
margin_bottom = 401.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="store_hud_layer/order_station_hud/margin_container/margin_container"]
margin_left = 6.0
margin_top = 6.0
margin_right = 699.0
margin_bottom = 395.0
custom_constants/separation = -1

[node name="label" type="Label" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container"]
margin_right = 693.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
text = "Aftermarket Party Supplies"
align = 1

[node name="label2" type="Label" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container"]
margin_top = 25.0
margin_right = 693.0
margin_bottom = 38.0
text = "\"We cater to your every need\""
align = 1

[node name="h_separator" type="HSeparator" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container"]
margin_top = 37.0
margin_right = 693.0
margin_bottom = 41.0

[node name="margin_container" type="MarginContainer" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container"]
margin_top = 40.0
margin_right = 693.0
margin_bottom = 369.0
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="center_container" type="CenterContainer" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container"]
margin_left = 8.0
margin_top = 8.0
margin_right = 685.0
margin_bottom = 321.0

[node name="store_grid" type="GridContainer" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container"]
margin_left = 34.0
margin_top = 56.0
margin_right = 642.0
margin_bottom = 256.0
columns = 9
script = ExtResource( 13 )

[node name="configuration" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid"]

[node name="widget_config6" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Music"
cost = 8
button_texture_normal = ExtResource( 10 )
button_texture_highlighted = ExtResource( 27 )
button_texture_disabled = ExtResource( 25 )

[node name="widget_config" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Balloons"
cost = 4
button_texture_normal = ExtResource( 9 )
button_texture_highlighted = ExtResource( 17 )
button_texture_disabled = ExtResource( 11 )

[node name="widget_config2" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Bundles"
cost = 8
button_texture_normal = ExtResource( 8 )
button_texture_highlighted = ExtResource( 12 )
button_texture_disabled = ExtResource( 14 )

[node name="widget_config3" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Hats"
cost = 16
button_texture_normal = ExtResource( 18 )
button_texture_highlighted = ExtResource( 21 )
button_texture_disabled = ExtResource( 24 )

[node name="widget_config4" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Bunting"
button_texture_normal = ExtResource( 20 )
button_texture_highlighted = ExtResource( 22 )
button_texture_disabled = ExtResource( 26 )

[node name="widget_config5" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Streamers"
cost = 10
button_texture_normal = ExtResource( 19 )
button_texture_highlighted = ExtResource( 16 )
button_texture_disabled = ExtResource( 23 )

[node name="widget_config7" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Banners"
cost = 20
button_texture_normal = ExtResource( 30 )
button_texture_highlighted = ExtResource( 28 )
button_texture_disabled = ExtResource( 29 )

[node name="widget_config8" type="Node" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid/configuration"]
script = ExtResource( 15 )
store_item_name = "Disco Balls"
cost = 1
button_texture_normal = ExtResource( 35 )
button_texture_highlighted = ExtResource( 37 )
button_texture_disabled = ExtResource( 36 )

[node name="store_grid_widget" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]

[node name="store_grid_widget2" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 68.0
margin_right = 132.0

[node name="store_grid_widget3" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 136.0
margin_right = 200.0

[node name="store_grid_widget4" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 204.0
margin_right = 268.0

[node name="store_grid_widget5" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 272.0
margin_right = 336.0

[node name="store_grid_widget6" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 340.0
margin_right = 404.0

[node name="store_grid_widget7" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 408.0
margin_right = 472.0

[node name="store_grid_widget8" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 476.0
margin_right = 540.0

[node name="store_grid_widget9" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 544.0
margin_right = 608.0

[node name="store_grid_widget10" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_top = 68.0
margin_bottom = 132.0

[node name="store_grid_widget11" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0

[node name="store_grid_widget12" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0

[node name="store_grid_widget13" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 204.0
margin_top = 68.0
margin_right = 268.0
margin_bottom = 132.0

[node name="store_grid_widget14" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 272.0
margin_top = 68.0
margin_right = 336.0
margin_bottom = 132.0

[node name="store_grid_widget15" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 340.0
margin_top = 68.0
margin_right = 404.0
margin_bottom = 132.0

[node name="store_grid_widget16" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 408.0
margin_top = 68.0
margin_right = 472.0
margin_bottom = 132.0

[node name="store_grid_widget17" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 476.0
margin_top = 68.0
margin_right = 540.0
margin_bottom = 132.0

[node name="store_grid_widget18" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 544.0
margin_top = 68.0
margin_right = 608.0
margin_bottom = 132.0

[node name="store_grid_widget19" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_top = 136.0
margin_bottom = 200.0

[node name="store_grid_widget20" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 68.0
margin_top = 136.0
margin_right = 132.0
margin_bottom = 200.0

[node name="store_grid_widget21" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 136.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 200.0

[node name="store_grid_widget22" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 204.0
margin_top = 136.0
margin_right = 268.0
margin_bottom = 200.0

[node name="store_grid_widget23" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 272.0
margin_top = 136.0
margin_right = 336.0
margin_bottom = 200.0

[node name="store_grid_widget24" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 340.0
margin_top = 136.0
margin_right = 404.0
margin_bottom = 200.0

[node name="store_grid_widget25" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 408.0
margin_top = 136.0
margin_right = 472.0
margin_bottom = 200.0

[node name="store_grid_widget26" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 476.0
margin_top = 136.0
margin_right = 540.0
margin_bottom = 200.0

[node name="store_grid_widget27" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/margin_container/center_container/store_grid" instance=ExtResource( 7 )]
margin_left = 544.0
margin_top = 136.0
margin_right = 608.0
margin_bottom = 200.0

[node name="back_button" type="Button" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container"]
margin_top = 368.0
margin_right = 693.0
margin_bottom = 389.0
text = "Back to the party"
script = ExtResource( 31 )

[node name="focus_sfx" type="AudioStreamPlayer" parent="store_hud_layer/order_station_hud/margin_container/margin_container/v_box_container/back_button"]
stream = ExtResource( 32 )
volume_db = -12.0
pitch_scale = 0.85
bus = "Effects"

[node name="store_open" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 33 )
volume_db = -3.0
bus = "Fanfares"

[node name="store_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = -3.0
bus = "Fanfares"

[node name="z_index" type="Node2D" parent="."]
z_index = 10
script = ExtResource( 38 )

[node name="margin_container" type="MarginContainer" parent="z_index"]
margin_left = -21.0
margin_top = 11.0
margin_right = 21.0
margin_bottom = 42.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nine_patch_rect" type="NinePatchRect" parent="z_index/margin_container"]
margin_right = 42.0
margin_bottom = 31.0
texture = ExtResource( 39 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="margin_container" type="MarginContainer" parent="z_index/margin_container"]
margin_right = 42.0
margin_bottom = 31.0

[node name="v_box_container" type="VBoxContainer" parent="z_index/margin_container/margin_container"]
margin_right = 42.0
margin_bottom = 31.0
custom_constants/separation = -4

[node name="label" type="Label" parent="z_index/margin_container/margin_container/v_box_container"]
margin_right = 42.0
margin_bottom = 13.0
text = "Party"
align = 1

[node name="label2" type="Label" parent="z_index/margin_container/margin_container/v_box_container"]
margin_top = 9.0
margin_right = 42.0
margin_bottom = 22.0
text = "Supply"
align = 1

[node name="label3" type="Label" parent="z_index/margin_container/margin_container/v_box_container"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 31.0
text = "Store"
align = 1
